Hang when interacting with desktop icons on x11 after 71c3f4af
(actually I'm running the cherry-pick ef2f5f07 from gnome-3-34
)
- Start Shell on x11 with the desktop-icons extension enabled
- Click on a desktop icon
- If you have this commit, the shell hangs. Here's the backtrace:
Here's the bt:
#0 0x00007f3891ba1d15 in XIfEvent () from /lib/x86_64-linux-gnu/libX11.so.6
#1 0x00007f38922dbeac in meta_x11_display_get_current_time_roundtrip (x11_display=0x5644e5fb4810)
at ../src/x11/meta-x11-display.c:1791
#2 0x00007f38931422f8 in sync_stage_window_focus (global=0x5644e5b822c0) at ../src/shell-global.c:610
#3 focus_actor_changed (stage=<optimised out>, param=<optimised out>, user_data=0x5644e5b822c0) at ../src/shell-global.c:625
#4 0x00007f3892ee96e2 in g_closure_invoke (closure=0x5644e62ec280, return_value=0x0, n_param_values=2, param_values=0x7ffd60ca40c0,
invocation_hint=0x7ffd60ca4040) at ../../../gobject/gclosure.c:810
#5 0x00007f3892efd544 in signal_emit_unlocked_R (node=node@entry=0x5644e5b1bc00, detail=detail@entry=626,
instance=instance@entry=0x5644e5ebfbb0, emission_return=emission_return@entry=0x0,
instance_and_params=instance_and_params@entry=0x7ffd60ca40c0) at ../../../gobject/gsignal.c:3641
#6 0x00007f3892f06327 in g_signal_emit_valist (instance=<optimised out>, signal_id=<optimised out>, detail=<optimised out>,
var_args=var_args@entry=0x7ffd60ca4290) at ../../../gobject/gsignal.c:3397
#7 0x00007f3892f069b3 in g_signal_emit (instance=instance@entry=0x5644e5ebfbb0, signal_id=<optimised out>, detail=<optimised out>)
at ../../../gobject/gsignal.c:3453
#8 0x00007f3892eee164 in g_object_dispatch_properties_changed (object=0x5644e5ebfbb0, n_pspecs=<optimised out>,
pspecs=<optimised out>) at ../../../gobject/gobject.c:1110
#9 0x00007f3892ef0722 in g_object_notify_by_spec_internal (pspec=<optimised out>, object=0x5644e5ebfbb0)
at ../../../gobject/gobject.c:1203
#10 g_object_notify_by_pspec (object=0x5644e5ebfbb0, pspec=<optimised out>) at ../../../gobject/gobject.c:1313
#11 0x00007f389227918d in meta_stage_deactivate (actor=0x5644e5ebfbb0) at ../src/backends/meta-stage.c:235
#12 0x00007f3892ee96e2 in g_closure_invoke (closure=0x5644e5e9d710, return_value=0x0, n_param_values=1, param_values=0x7ffd60ca45b0,
invocation_hint=0x7ffd60ca4530) at ../../../gobject/gclosure.c:810
#13 0x00007f3892efccc6 in signal_emit_unlocked_R (node=node@entry=0x5644e5eae3c0, detail=detail@entry=0,
instance=instance@entry=0x5644e5ebfbb0, emission_return=emission_return@entry=0x0,
instance_and_params=instance_and_params@entry=0x7ffd60ca45b0) at ../../../gobject/gsignal.c:3679
#14 0x00007f3892f06327 in g_signal_emit_valist (instance=<optimised out>, signal_id=<optimised out>, detail=<optimised out>,
var_args=var_args@entry=0x7ffd60ca4760) at ../../../gobject/gsignal.c:3397
#15 0x00007f3892f069b3 in g_signal_emit (instance=instance@entry=0x5644e5ebfbb0, signal_id=<optimised out>, detail=<optimised out>)
at ../../../gobject/gsignal.c:3453
#16 0x00007f389249da60 in clutter_stage_event (stage=stage@entry=0x5644e5ebfbb0, event=event@entry=0x7ffd60ca4880)
at ../clutter/clutter/clutter-stage.c:2955
#17 0x00007f38924a10f2 in _clutter_stage_update_state (stage=0x5644e5ebfbb0,
unset_flags=unset_flags@entry=CLUTTER_STAGE_STATE_ACTIVATED, set_flags=set_flags@entry=(unknown: 0))
at ../clutter/clutter/clutter-stage.c:4495
#18 0x00007f3892289454 in meta_stage_x11_translate_event (stage_x11=0x5644e5b5d2d0, xevent=xevent@entry=0x7ffd60ca4a70,
event=event@entry=0x5644e6e0dee0) at ../src/backends/x11/meta-stage-x11.c:859
#19 0x00007f389227c267 in meta_clutter_backend_x11_translate_event (backend=0x5644e5b6c020, native=0x7ffd60ca4a70,
event=0x5644e6e0dee0) at ../src/backends/x11/meta-clutter-backend-x11.c:135
#20 0x00007f389227fd7c in meta_x11_handle_event (xevent=xevent@entry=0x7ffd60ca4a70) at ../src/backends/x11/meta-event-x11.c:106
#21 0x00007f389227b3b3 in handle_host_xevent (event=0x7ffd60ca4a70, backend=0x5644e5b22130)
at ../src/backends/x11/meta-backend-x11.c:388
#22 x_event_source_dispatch (source=<optimised out>, callback=<optimised out>, user_data=<optimised out>)
at ../src/backends/x11/meta-backend-x11.c:441
#23 0x00007f3892dfe84d in g_main_dispatch (context=0x5644e5b1da00) at ../../../glib/gmain.c:3179
#24 g_main_context_dispatch (context=context@entry=0x5644e5b1da00) at ../../../glib/gmain.c:3844
#25 0x00007f3892dfead0 in g_main_context_iterate (context=0x5644e5b1da00, block=block@entry=1, dispatch=dispatch@entry=1,
self=<optimised out>) at ../../../glib/gmain.c:3917
#26 0x00007f3892dfedc3 in g_main_loop_run (loop=0x5644e5f06a90) at ../../../glib/gmain.c:4111
#27 0x00007f38922b40a0 in meta_run () at ../src/core/main.c:676
#28 0x00005644e3f58d85 in main (argc=<optimised out>, argv=<optimised out>) at ../src/main.c:636
cc @carlosg
Edited by Iain Lane